--- a/google-cloud-network/docker-compose-couch-pc1.yaml
+++ b/google-cloud-network/docker-compose-couch-pc1.yaml
@@ -27,7 +27,7 @@ services:
         aliases:
           - couchdb0
 
-  peer0.hprovider.healthcare.com:
+  peer0_hprovider_healthcare_com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
