--- a/google-cloud-network/docker-compose-cli-pc2.yaml
+++ b/google-cloud-network/docker-compose-cli-pc2.yaml
@@ -19,7 +19,8 @@ networks:
 services:
 
   peer1_hprovider_healthcare_com:
-    #hostname: peer1.hprovider.healthcare.com
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    hostname: peer1.hprovider.healthcare.com
     environment:
       - CORE_PEER_ID=peer1_hprovider_healthcare_com
       - CORE_PEER_ADDRESS=peer1_hprovider_healthcare_com:8051
@@ -63,7 +64,8 @@ services:
 #---------------------------------- New Peers -------------------------------
   
   peer2_hprovider_healthcare_com:
-    #hostname: peer2_hprovider_healthcare.com
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    hostname: peer2_hprovider_healthcare.com
     environment:
       - CORE_PEER_ID=peer2_hprovider_healthcare.com
       - CORE_PEER_ADDRESS=peer2_hprovider_healthcare_com:11051
@@ -105,7 +107,8 @@ services:
         constraints: [node.role == worker]
 
   peer3_hprovider_healthcare_com:
-    #hostname: peer3.hprovider.healthcare.com
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    hostname: peer3.hprovider.healthcare.com
     environment:
       - CORE_PEER_ID=peer3_hprovider_healthcare.com
       - CORE_PEER_ADDRESS=peer3_hprovider_healthcare_com:12051
@@ -147,7 +150,8 @@ services:
         constraints: [node.role == worker]
   
   peer4_hprovider_healthcare_com:
-    #hostname: peer4_hprovider_healthcare_com
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    hostname: peer4_hprovider_healthcare_com
     environment:
       - CORE_PEER_ID=peer4_hprovider_healthcare_com
       - CORE_PEER_ADDRESS=peer4_hprovider_healthcare_com:13051
@@ -188,41 +192,41 @@ services:
       placement:
         constraints: [node.role == worker]
 
-  cli_pc2:
-    #hostname: clipc2
-    image: hyperledger/fabric-tools:$IMAGE_TAG
-    tty: true
-    stdin_open: true
-    environment:
-      - SYS_CHANNEL=$SYS_CHANNEL
-      - GOPATH=/opt/gopath
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      #- FABRIC_LOGGING_SPEC=DEBUG
-      - FABRIC_LOGGING_SPEC=INFO
-      - CORE_PEER_ID=cli_pc2
-      - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
-      - CORE_PEER_LOCALMSPID=HProviderMSP
-      - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-    command: /bin/bash
-    volumes:
-        - /var/run/:/host/var/run/
-        - ./chaincode/:/opt/gopath/src/github.com/chaincode
-        - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-        - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
-        - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
-    depends_on:
-      - peer1_hprovider_healthcare_com
-      - peer2_hprovider_ healthcare_com
-      - peer3_hprovider_healthcare_com
-      - peer4_hprovider_healthcare_com
-    networks:
-      health_network:
-        aliases:
-          - cli_pc2
+  # cli_pc2:
+  #   #hostname: clipc2
+  #   image: hyperledger/fabric-tools:$IMAGE_TAG
+  #   tty: true
+  #   stdin_open: true
+  #   environment:
+  #     - SYS_CHANNEL=$SYS_CHANNEL
+  #     - GOPATH=/opt/gopath
+  #     - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+  #     #- FABRIC_LOGGING_SPEC=DEBUG
+  #     - FABRIC_LOGGING_SPEC=INFO
+  #     - CORE_PEER_ID=cli_pc2
+  #     - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
+  #     - CORE_PEER_LOCALMSPID=HProviderMSP
+  #     - CORE_PEER_TLS_ENABLED=true
+  #     - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
+  #     - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
+  #     - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
+  #     - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
+  #   working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+  #   command: /bin/bash
+  #   volumes:
+  #       - /var/run/:/host/var/run/
+  #       - ./chaincode/:/opt/gopath/src/github.com/chaincode
+  #       - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+  #       - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+  #       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+  #   depends_on:
+  #     - peer1_hprovider_healthcare_com
+  #     - peer2_hprovider_ healthcare_com
+  #     - peer3_hprovider_healthcare_com
+  #     - peer4_hprovider_healthcare_com
+  #   networks:
+  #     health_network:
+  #       aliases:
+  #         - cli_pc2
 
   
