--- a/google-cloud-network/docker-compose-couch-pc1.yaml
+++ b/google-cloud-network/docker-compose-couch-pc1.yaml
@@ -14,7 +14,7 @@ networks:
 services:
   couchdb0:
     container_name: couchdb0
-    image: hyperledger/fabric-couchdb:$IMAGE_TAG
+    image: hyperledger/fabric-couchdb:latest
     # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
     # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
     environment:
@@ -32,14 +32,14 @@ services:
       placement:
         constraints: [node.role == manager]
 
-  peer0_hprovider_healthcare_com:
-    environment:
-      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
-      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-      # provide the credentials for ledger to connect to CouchDB.  The username and password must
-      # match the username and password set for the associated CouchDB.
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-    depends_on:
-      - couchdb0
+  # peer0_hprovider_healthcare_com:
+  #   environment:
+  #     - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
+  #     # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
+  #     # provide the credentials for ledger to connect to CouchDB.  The username and password must
+  #     # match the username and password set for the associated CouchDB.
+  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
+  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
+  #   depends_on:
+  #     - couchdb0
